:hammer: allow wise and block new pishing arrived

--- a/AdGuardHome.yaml
+++ b/AdGuardHome.yaml
@@ -158,6 +158,7 @@ filters:
     id: 1743462323
 whitelist_filters: []
 user_rules:
+  - '||tqadev.serv00.net'
   - '||geometryjump.com^$client=~192.168.10.0/24|~192.168.30.0/24|~192.168.60.0/24'
   - '||crazygames.com^$client=~192.168.10.0/24|~192.168.30.0/24|~192.168.60.0/24'
   - '||poki.com^$client=~192.168.10.0/24|~192.168.30.0/24|~192.168.60.0/24'
@@ -237,7 +238,7 @@ user_rules:
   - '@@||www.deviantart.com^$important'
   - '@@||syathiby.sch.id^$important'
   - '@@||repository.dinus.ac.id^$important'
-  - ""
+  - '@@||wise.com^$important'
 dhcp:
   enabled: false
   interface_name: ""
@@ -341,6 +342,35 @@ clients:
         - device_pc
       upstreams: []
       uid: 0198e41d-40fa-7a5f-94e9-00eb0c380cf3
+      upstreams_cache_size: 0
+      upstreams_cache_enabled: false
+      use_global_settings: true
+      filtering_enabled: false
+      parental_enabled: false
+      safebrowsing_enabled: false
+      use_global_blocked_services: false
+      ignore_querylog: false
+      ignore_statistics: false
+    - safe_search:
+        enabled: true
+        bing: true
+        duckduckgo: true
+        ecosia: true
+        google: true
+        pixabay: true
+        yandex: true
+        youtube: true
+      blocked_services:
+        schedule:
+          time_zone: Local
+        ids: []
+      name: LAN IT
+      ids:
+        - 192.168.50.1/24
+      tags:
+        - device_pc
+      upstreams: []
+      uid: 0198e501-4576-7082-b14f-244dda776e29
       upstreams_cache_size: 0
       upstreams_cache_enabled: false
       use_global_settings: true
